Configure release build and launcher, and remove artifacts from git